dotnet-bookstore/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-web
  labels:
    app: bookstore
    component: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: bookstore
    component: web
